# forecasting-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_backtest.py
src/forecasting_framework/config/: settings.py
src/forecasting_framework/modeling/: base_model.py  default_registry.py  model_registry.py  xgb_model.py
src/forecasting_framework/pipeline/: backtester.py
src/forecasting_framework/utils/: metrics.py
